@@ -1,5 +1,6 @@
 1.1.4
 - Fix descriptor leak on enqueue failure (Steven Brzozowski)
+- Switch SHA256 hashing to openssl
 
 1.1.3
 - Replace snprintf integer to char conversion with uitoa function
